SAK-6724 -- Started work on toggling sections to be enterprise vs. manually controlled.
git-svn-id: https://source.sakaiproject.org/svn/sections/trunk@17334 66ffb92e-73f9-0310-93c1-f5514f145a0a