@@ -71,22 +71,15 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
     protected Context context;
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public List getSections(final String siteContext) {
     	if(log.isDebugEnabled()) log.debug("Getting sections for context " + siteContext);
-        HibernateCallback hc = new HibernateCallback(){
-            public Object doInHibernate(Session session) throws HibernateException {
-                Query q = session.getNamedQuery("findSectionsBySiteContext");
-                q.setParameter("context", siteContext);
-                return q.list();
-            }
-        };
-        return getHibernateTemplate().executeFind(hc);
+    	return getHibernateTemplate().findByNamedQueryAndNamedParam("findSectionsBySiteContext", "context", siteContext);
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public List getSectionsInCategory(final String siteContext, final String categoryId) {
         HibernateCallback hc = new HibernateCallback(){
@@ -101,7 +94,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public CourseSection getSection(final String sectionUuid) {
         HibernateCallback hc = new HibernateCallback(){
@@ -113,7 +106,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public List getSiteInstructors(final String siteContext) {
         HibernateCallback hc = new HibernateCallback(){
@@ -128,7 +121,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public List getSiteTeachingAssistants(final String siteContext) {
         HibernateCallback hc = new HibernateCallback(){
@@ -143,7 +136,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 	
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public List getSiteEnrollments(final String siteContext) {
         HibernateCallback hc = new HibernateCallback(){
@@ -158,7 +151,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public List getSectionTeachingAssistants(final String sectionUuid) {
         HibernateCallback hc = new HibernateCallback(){
@@ -173,7 +166,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public List getSectionEnrollments(final String sectionUuid) {
         HibernateCallback hc = new HibernateCallback(){
@@ -188,7 +181,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public List findSiteEnrollments(String siteContext, String pattern) {
 		List fullList = getSiteEnrollments(siteContext);
@@ -206,7 +199,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public String getCategoryName(String categoryId, Locale locale) {
 		ResourceBundle bundle = ResourceBundle.getBundle(SectionAwareness.CATEGORY_BUNDLE, locale);
@@ -221,7 +214,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public List getSectionCategories(String siteContext) {
 		ResourceBundle bundle = ResourceBundle.getBundle(SectionAwareness.CATEGORY_BUNDLE);
@@ -257,10 +250,10 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
         }
 	}
 
-	private Course getCourseFromUuid(String courseUuid, Session session) throws HibernateException {
+	private CourseImpl getCourseFromUuid(String courseUuid, Session session) throws HibernateException {
         Query q = session.getNamedQuery("loadCourseByUuid");
         q.setParameter("uuid", courseUuid);
-        Course course = (Course)q.uniqueResult();
+        CourseImpl course = (CourseImpl)q.uniqueResult();
         if(course == null) {
         	throw new MembershipException("No course exists with uuid = " + courseUuid);
         } else {
@@ -269,7 +262,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public Course getCourse(final String siteContext) {
     	if(log.isDebugEnabled()) log.debug("Getting course for context " + siteContext);
@@ -282,7 +275,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public SectionEnrollments getSectionEnrollmentsForStudents(final String siteContext, final Set studentUids) {
         HibernateCallback hc = new HibernateCallback(){
@@ -302,7 +295,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
     public EnrollmentRecord joinSection(final String sectionUuid) {
         HibernateCallback hc = new HibernateCallback(){
@@ -335,7 +328,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
     }
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
     public void switchSection(final String newSectionUuid) {
         HibernateCallback hc = new HibernateCallback(){
@@ -380,7 +373,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
     }
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
     public ParticipationRecord addSectionMembership(String userUid, Role role, String sectionUuid)
             throws MembershipException {
@@ -457,7 +450,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 	
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public void setSectionMemberships(final Set userUids, final Role role, final String sectionUuid) {
         HibernateCallback hc = new HibernateCallback(){
@@ -545,7 +538,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public void dropSectionMembership(final String userUid, final String sectionUuid) {
         HibernateCallback hc = new HibernateCallback(){
@@ -563,7 +556,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
     }
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public void dropEnrollmentFromCategory(final String studentUid,
 			final String siteContext, final String category) {
@@ -584,7 +577,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public int getTotalEnrollments(final String learningContextUuid) {
         HibernateCallback hc = new HibernateCallback(){
@@ -599,7 +592,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
     public CourseSection addSection(final String courseUuid, final String title,
     		final String category, final Integer maxEnrollments,
@@ -627,7 +620,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
     }
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
     public void updateSection(final String sectionUuid, final String title,
     		final Integer maxEnrollments, final String location, final Time startTime,
@@ -657,9 +650,9 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
         getHibernateTemplate().execute(hc);
 	}
 
-	/**
-	 * @inheritDoc
-	 */
+    /**
+     * {@inheritDoc}
+     */
     public void disbandSection(final String sectionUuid) {
         if(log.isDebugEnabled()) log.debug("Disbanding section " + sectionUuid);
         HibernateCallback hc = new HibernateCallback(){
@@ -681,22 +674,52 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
         getHibernateTemplate().execute(hc);
     }
 
-	/**
-	 * @inheritDoc
-	 */
+    /**
+     * {@inheritDoc}
+     */
+	public boolean isExternallyManaged(final String courseUuid) {
+        HibernateCallback hc = new HibernateCallback(){
+            public Object doInHibernate(Session session) throws HibernateException {
+            	CourseImpl course = getCourseFromUuid(courseUuid, session);
+            	return Boolean.valueOf(course.isExternallyManaged());
+            }
+        };
+        return ((Boolean)getHibernateTemplate().execute(hc)).booleanValue();
+	}
+
+	public void setExternallyManaged(final String courseUuid, final boolean externallyManaged) {
+        HibernateCallback hc = new HibernateCallback(){
+            public Object doInHibernate(Session session) throws HibernateException {
+            	CourseImpl course = (CourseImpl)getCourseFromUuid(courseUuid, session);
+            	course.setExternallyManaged(externallyManaged);
+            	if(externallyManaged) {
+                	// Also set the self join/switch to false
+                	course.setSelfRegistrationAllowed(false);
+                	course.setSelfSwitchingAllowed(false);
+            	}
+            	session.update(course);
+            	return null;
+            }
+        };
+        getHibernateTemplate().execute(hc);
+	}
+
+    /**
+     * {@inheritDoc}
+     */
     public boolean isSelfRegistrationAllowed(final String courseUuid) {
         HibernateCallback hc = new HibernateCallback(){
             public Object doInHibernate(Session session) throws HibernateException {
-            	Course course = getCourseFromUuid(courseUuid, session);
-            	return new Boolean(course.isSelfRegistrationAllowed());
+            	CourseImpl course = getCourseFromUuid(courseUuid, session);
+            	return Boolean.valueOf(course.isSelfRegistrationAllowed());
             }
         };
         return ((Boolean)getHibernateTemplate().execute(hc)).booleanValue();
     }
 
-	/**
-	 * @inheritDoc
-	 */
+    /**
+     * {@inheritDoc}
+     */
     public void setSelfRegistrationAllowed(final String courseUuid, final boolean allowed) {
         HibernateCallback hc = new HibernateCallback(){
             public Object doInHibernate(Session session) throws HibernateException {
@@ -710,20 +733,20 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
     }
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
     public boolean isSelfSwitchingAllowed(final String courseUuid) {
         HibernateCallback hc = new HibernateCallback(){
             public Object doInHibernate(Session session) throws HibernateException {
-            	Course course = getCourseFromUuid(courseUuid, session);
-            	return new Boolean(course.isSelfSwitchingAllowed());
+            	CourseImpl course = getCourseFromUuid(courseUuid, session);
+            	return Boolean.valueOf(course.isSelfSwitchingAllowed());
             }
         };
         return ((Boolean)getHibernateTemplate().execute(hc)).booleanValue();
     }
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
     public void setSelfSwitchingAllowed(final String courseUuid, final boolean allowed) {
         HibernateCallback hc = new HibernateCallback(){
@@ -738,7 +761,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
     }
     
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public List getUnsectionedEnrollments(final String courseUuid, final String category) {
         HibernateCallback hc = new HibernateCallback(){
@@ -753,7 +776,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public Set getSectionEnrollments(final String userUid, final String courseUuid) {
         HibernateCallback hc = new HibernateCallback(){
@@ -768,7 +791,7 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	}
 
 	/**
-	 * @inheritDoc
+	 * {@inheritDoc}
 	 */
 	public User getSiteEnrollment(final String siteContext, final String studentUid) {
         HibernateCallback hc = new HibernateCallback(){
@@ -803,4 +826,5 @@ public class SectionManagerHibernateImpl extends HibernateDaoSupport implements
 	public void setContext(Context context) {
 		this.context = context;
 	}
+
 }
